[package]
name = "perl-lsp-rust"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Soares <caneca@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.0.1"
serde = "1.0.203"
serde_json = "1.0.118"
tokio = {version = "1.38.0", features = ["full"]}
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.18"
